--- a/LibraryOfTroyWeb/src/app/login/login.component.css
+++ b/LibraryOfTroyWeb/src/app/login/login.component.css
@@ -1,4 +1,3 @@
-/* Create a shared auth styles file - src/app/styles/auth-forms.scss */
 .login-container,
 .register-container {
   display: flex;
@@ -6,17 +5,19 @@
   align-items: center;
   height: 100%;
   padding: 1rem;
-  background-color: #e9edf5;
 }
 
 .login-card,
 .register-card {
+  display: flex;
+  flex-direction: column;
+  align-content: stretch;
   background-color: white;
   border-radius: 12px;
   box-shadow: 0 6px 16px rgba(0, 0, 0, 0.1);
-  padding: 2rem;
+  padding: 3rem;
   width: 100%;
-  max-width: 400px;
+  max-width: 500px;
 }
 .login-card h2,
 .register-card h2 {
@@ -28,12 +29,19 @@
 
 .form-group {
   margin-bottom: 1.25rem;
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  justify-content: space-between;
+  justify-items: stretch;
+  flex-grow: 1;
 }
 .form-group label {
   display: block;
   margin-bottom: 0.5rem;
   font-weight: 500;
   color: #455a79;
+  flex-shrink: 1;
 }
 .form-group.checkbox {
   display: flex;
@@ -50,8 +58,10 @@
   padding: 0.75rem;
   border: 1px solid #ccd2de;
   border-radius: 6px;
-  font-size: 1rem;
+  font-size: 1.2rem;
   transition: border-color 0.2s;
+  margin: 1rem;
+  flex-grow: 1;
 }
 .form-control:focus {
   outline: none;
@@ -87,7 +97,7 @@
 }
 
 .submit-button {
-  width: 100%;
+  width: 65%;
   padding: 0.85rem;
   background-color: #00a3a4;
   color: white;
@@ -100,11 +110,38 @@
   display: flex;
   justify-content: center;
   align-items: center;
+  margin-left: 1rem;
+  margin-right: 1rem;
 }
 .submit-button:hover:not(:disabled) {
   background-color: #00d493;
 }
 .submit-button:disabled {
+  opacity: 0.7;
+  cursor: not-allowed;
+}
+
+.cancel-button {
+  width: 30%;
+  padding: 0.85rem;
+  background-color: #777777;
+  color: white;
+  border: none;
+  border-radius: 6px;
+  font-size: 1rem;
+  font-weight: 600;
+  cursor: pointer;
+  transition: background-color 0.2s;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  margin-left: 1rem;
+  margin-right: 1rem;
+}
+.cancel-button:hover:not(:disabled) {
+  background-color: #00d493;
+}
+.cancel-button:disabled {
   opacity: 0.7;
   cursor: not-allowed;
 }
