--- a/LibraryOfTroyWeb/src/app/login/login.component.scss
+++ b/LibraryOfTroyWeb/src/app/login/login.component.scss
@@ -1,5 +1,3 @@
-/* Create a shared auth styles file - src/app/styles/auth-forms.scss */
-
 .login-container,
 .register-container {
   display: flex;
@@ -7,17 +5,19 @@
   align-items: center;
   height: 100%;
   padding: 1rem;
-  background-color: #e9edf5;
 }
 
 .login-card,
 .register-card {
+  display: flex;
+  flex-direction: column;
+  align-content: stretch;
   background-color: white;
   border-radius: 12px;
   box-shadow: 0 6px 16px rgba(0, 0, 0, 0.1);
-  padding: 2rem;
+  padding: 3rem;
   width: 100%;
-  max-width: 400px;
+  max-width: 500px;
 
   h2 {
     color: #1e4572;
@@ -29,12 +29,19 @@
 
 .form-group {
   margin-bottom: 1.25rem;
+  display:flex;
+  flex-direction: row;
+  align-items: center;
+  justify-content: space-between;
+  justify-items: stretch;
+  flex-grow: 1;
 
   label {
     display: block;
     margin-bottom: 0.5rem;
     font-weight: 500;
     color: #455a79;
+    flex-shrink: 1;
   }
 
   &.checkbox {
@@ -54,8 +61,10 @@
   padding: 0.75rem;
   border: 1px solid #ccd2de;
   border-radius: 6px;
-  font-size: 1rem;
+  font-size: 1.2rem;
   transition: border-color 0.2s;
+  margin:1rem;
+  flex-grow: 1;
 
   &:focus {
     outline: none;
@@ -95,7 +104,7 @@
 }
 
 .submit-button {
-  width: 100%;
+  width: 65%;
   padding: 0.85rem;
   background-color: #00a3a4;
   color: white;
@@ -108,6 +117,34 @@
   display: flex;
   justify-content: center;
   align-items: center;
+  margin-left:1rem;
+  margin-right:1rem;
+
+  &:hover:not(:disabled) {
+    background-color: #00d493;
+  }
+
+  &:disabled {
+    opacity: 0.7;
+    cursor: not-allowed;
+  }
+}
+.cancel-button {
+  width: 30%;
+  padding: 0.85rem;
+background-color: #777777;
+  color: white;
+  border: none;
+  border-radius: 6px;
+  font-size: 1rem;
+  font-weight: 600;
+  cursor: pointer;
+  transition: background-color 0.2s;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  margin-left:1rem;
+  margin-right:1rem;
 
   &:hover:not(:disabled) {
     background-color: #00d493;
